--- a/notebooks/Unemployment_rate_over_the_years.ipynb
+++ b/notebooks/Unemployment_rate_over_the_years.ipynb
@@ -1376,6 +1376,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1391,7 +1392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
